# picc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  german-english-asr-research.md  homophone-replacer-research.md  streaming-asr-plan.md
.cargo/: config.toml
.claude/: plan.md
.claude/skills/build-bin/: SKILL.md
.claude/skills/verify/: SKILL.md
crates/dictation-ng/: Cargo.toml  build.rs
crates/dictation-ng/src/: main.rs  real.rs  sherpa.rs
crates/homophone-replacer/: Cargo.toml
crates/homophone-replacer/assets/: common-mistakes.rules.txt  lexicon.txt  test-names.txt
crates/homophone-replacer/src/: compiled.rs  lexicon.rs  lib.rs  official_examples.rs  phrase_matcher.rs  pronunciation.rs  replacer.rs
crates/homophone-replacer/tests/: baselines.rs  official_examples.rs
crates/picc-macos-app/: Cargo.toml
crates/picc-macos-app/src/: lib.rs
crates/picc-macos-input/: Cargo.toml
crates/picc-macos-input/src/: lib.rs
crates/picc-speech/: Cargo.toml
crates/picc-speech/src/: audio.rs  errors.rs  focus.rs  hotkey.rs  lib.rs  models.rs  postprocess.rs  session.rs  text_sink.rs
docs/plans/: 2026-03-03-standup-lan-sync-design.md  2026-03-03-standup-lan-sync-windows-prompt.md
examples/: ambient-light.rs  app-audio.rs  ax_print.rs  dump_locator.rs  explore_codeblock4.rs  hover_test.rs  lid-angle.rs  local-ocr.rs  locator_demo.rs  multi_screen_test.rs  screen-ocr.rs  speech-recognition.rs
src/: accessibility.rs  actions.rs  avfaudio.rs  core_graphics.rs  error.rs  input.rs  lib.rs  locator.rs  main.rs  screen_capture.rs  screenshot.rs  tree_fmt.rs  vision.rs
