[package]
name = "picc"
version = "0.1.0"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/andelf/picc"
documentation = "https://docs.rs/picc"
homepage = "https://github.com/andelf/picc"
categories = []
description = "PICCrop, simple OCR + Screenshot tool"
keywords = []
readme = "README.md"
license = "MIT/Apache-2.0"

[[bin]]
name = "picc"
path = "src/main.rs"

[[bin]]
name = "standup"
path = "src/bin/standup.rs"

[[bin]]
name = "hidden"
path = "src/bin/hidden.rs"

[[bin]]
name = "ax_print"
path = "src/bin/ax_print.rs"

[[bin]]
name = "ax_tui"
path = "src/bin/ax_tui.rs"

[[bin]]
name = "axcli"
path = "src/bin/axcli.rs"

[[bin]]
name = "claude_menubar"
path = "src/bin/claude_menubar.rs"

[[bin]]
name = "english-refiner"
path = "src/bin/english_refiner.rs"

[[bin]]
name = "dictation"
path = "src/bin/dictation.rs"
required-features = ["sensevoice"]

[dependencies]
objc2 = "0.6.3"
block2 = "0.6.2"
objc2-core-foundation = { version = "0.3.2", features = ["CFRunLoop"] }
objc2-foundation = { version = "0.3.2", features = [
    "NSArray",
    "NSDictionary",
    "NSError",
    "NSString",
    "NSDate",
    "NSRunLoop",
    "NSURL",
    "NSLocale",
    "NSObject",
    "NSValue",
    "NSTimer",
] }
objc2-app-kit = { version = "0.3.2", features = [
    "NSApplication",
    "NSPanel",
    "NSWindow",
    "NSView",
    "NSEvent",
    "NSScreen",
    "NSImage",
    "NSBezierPath",
    "NSColor",
    "NSGraphicsContext",
    "NSResponder",
    "NSRunningApplication",
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSMenu",
    "NSMenuItem",
    "NSButton",
    "NSControl",
    "block2",
] }
objc2-core-graphics = { version = "0.3.2", features = [
    "CGImage",
    "CGGeometry",
    "CGWindow",
    "CGWindowLevel",
    "CGEventTypes",
    "CGEvent",
    "CGEventSource",
] }
objc2-vision = { version = "0.3.2", features = [
    "VNRecognizeTextRequest",
    "VNDetectBarcodesRequest",
    "VNRequestHandler",
    "VNRequest",
    "VNObservation",
    "VNTypes",
    "objc2-core-graphics",
] }
objc2-avf-audio = { version = "0.3.2", features = [
    "AVAudioEngine",
    "AVAudioNode",
    "AVAudioIONode",
    "AVAudioFormat",
    "AVAudioBuffer",
    "AVAudioTime",
    "AVAudioTypes",
    "block2",
] }
objc2-speech = { version = "0.3.2", features = [
    "SFSpeechRecognizer",
    "SFSpeechRecognitionRequest",
    "SFSpeechRecognitionResult",
    "SFSpeechRecognitionTask",
    "SFTranscription",
    "SFTranscriptionSegment",
    "block2",
] }
objc2-application-services = { version = "0.3.2", features = [
    "HIServices",
    "AXError",
    "AXUIElement",
    "AXAttributeConstants",
    "AXRoleConstants",
    "AXActionConstants",
    "AXValue",
] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
tui-tree-widget = "0.23"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time", "env-filter"] }
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
rand = "0.8"
sherpa-rs = { version = "0.6", default-features = false, features = ["static"], optional = true }

[features]
default = []
sensevoice = ["sherpa-rs"]
