[package]
name = "picc-macos-app"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = [
    "NSApplication",
    "NSImage",
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSMenu",
    "NSMenuItem",
    "NSRunningApplication",
] }
objc2-foundation = { version = "0.3.2", features = ["NSString"] }
