[package]
name = "picc-macos-input"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
objc2-app-kit = { version = "0.3.2", features = [
    "NSRunningApplication",
] }
objc2-core-foundation = { version = "0.3.2", features = ["CFRunLoop"] }
objc2-core-graphics = { version = "0.3.2", features = [
    "CGGeometry",
    "CGEventTypes",
    "CGEvent",
    "CGEventSource",
    "CGRemoteOperation",
] }
